--- a/MapCreator.html
+++ b/MapCreator.html
@@ -4,6 +4,7 @@
     <title>Infection Rate Simulator</title>
     <meta name="viewport" content="initial-scale=1.0">
     <meta charset="utf-8">
+    <script src="fixMap.js" type="text/javascript"></script>
     <style>
       /* Always set the map height explicitly to define the size of the div
        * element that contains the map. */
@@ -20,7 +21,8 @@
   </head>
   <body>
     <div id="map"></div>
-    <script>
+    <script src="main.js" type="text/javascript"></script>
+   <!-- <script>
       var map;
       function initMap() {
         map = new google.maps.Map(document.getElementById('map'), {
@@ -28,7 +30,7 @@
           zoom: 8
         });
       }
-    </script>
+    </script> -->
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCGlGLk1uz2vLdRvQw2a0_4olmFlEEh7qs&callback=initMap"
     async defer></script>
   </body>
