--- a/MapCreator.html
+++ b/MapCreator.html
@@ -5,33 +5,20 @@
     <meta name="viewport" content="initial-scale=1.0">
     <meta charset="utf-8">
     <script src="fixMap.js" type="text/javascript"></script>
-    <style>
-      /* Always set the map height explicitly to define the size of the div
-       * element that contains the map. */
-      #map {
-        height: 100%;
-      }
-      /* Optional: Makes the sample page fill the window. */
-      html, body {
-        height: 100%;
-        margin: 0;
-        padding: 0;
-      }
-    </style>
+    <link rel="stylesheet" href="grid.css">
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <div id="map"></div>
+    
+    <div id="floating panel">
+      <!-- future location of buttons to change location -->
+    </div>
+
+    <div id="map">
     <script src="main.js" type="text/javascript"></script>
-   <!-- <script>
-      var map;
-      function initMap() {
-        map = new google.maps.Map(document.getElementById('map'), {
-          center: {lat: -34.397, lng: 150.644},
-          zoom: 8
-        });
-      }
-    </script> -->
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCGlGLk1uz2vLdRvQw2a0_4olmFlEEh7qs&callback=initMap"
-    async defer></script>
+    <script src="grid.js" type="text/javascript"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCGlGLk1uz2vLdRvQw2a0_4olmFlEEh7qs&callback=initMap" async defer></script>
+    </div>
+
   </body>
 </html>
