--- a/MapCreator.html
+++ b/MapCreator.html
@@ -9,15 +9,15 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    
-    <div id="floating panel">
-      <!-- future location of buttons to change location -->
-    </div>
 
     <div id="map">
     <script src="main.js" type="text/javascript"></script>
     <script src="grid.js" type="text/javascript"></script>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCGlGLk1uz2vLdRvQw2a0_4olmFlEEh7qs&callback=initMap" async defer></script>
+    </div>
+
+     <div id="floating" align="center">
+      <button onclick="nextStep()">Next Step</button>
     </div>
 
   </body>
