--- a/MapCreator.html
+++ b/MapCreator.html
@@ -9,12 +9,8 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-
-    <div id="splash">
-
-    </div>
-
-    <div id="grid">
+    
+    <!-- <div id="container"> -->
       <div id="map">
         <script src="main.js" type="text/javascript"></script>
         <script src="grid.js" type="text/javascript"></script>
@@ -22,9 +18,10 @@
       </div>
 
       <div id="floating" align="center">
-        <button onclick="nextStep()">Simulate (Moore)</button>
+        <button onclick="startSim()">Simulate (Moore)</button>
       </div>
-    </div>
+    
+
 
   </body>
 </html>
